--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "view",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -11,6 +11,10 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ]    
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
