--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,11 @@
 {
   "hosting": {
-    "public": "view",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]    
+    ]
   },
   "firestore": {
     "rules": "firestore.rules",
